app.css
/**
 * [balzdash]
 *
 * @version: 0.0.1
 * @author: Harry Balz
 * @description super simple dash
 *
 * [license]
 */

@font-face {
    font-family: myriadPro;
    src: url(fonts/Myriad-Pro_31655.ttf);
}
@font-face {
    font-family: robotoLight;
    src: url(fonts/Roboto-Light.ttf);
}
@font-face {
    font-family: robotoMedium;
    src: url(fonts/Roboto-Medium.ttf);
}

[app="app.balzdash"] .invisible {
	visibility: hidden;
}

[app="app.balzdash"] {
	background-color: #000000;
	-webkit-font-feature-settings: "kern" , "liga" , "pnum";
	font-feature-settings: "kern" , "liga" , "pnum";
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-family: robotoLight,"Helvetica","Roboto","Arial",sans-serif;
}

[app="app.balzdash"] #top-left-con {
	position: absolute;
	top: 50px;
	left: 0;
	width: 540px;
	color:rgba(255, 255, 255, 0.9);
	text-align: center;
}
[app="app.balzdash"] #speedometer .value {
	display: block;
	font-size: 240px;
	line-height: 240px;
	font-family: robotoMedium,"Helvetica","Roboto","Arial",sans-serif;
	opacity: .9;
}
[app="app.balzdash"] #speedometer .label {
	display: block;
	margin-top: -12px;
	margin-bottom: 36px;
	font-size: 18px;
	line-height: 18px;
	text-transform: uppercase;
	font-weight: bold;
	opacity: .3;
}

[app="app.balzdash"] #top-speed,
[app="app.balzdash"] #avg-speed {
	display: inline-block;
}
[app="app.balzdash"] #top-speed {
	margin-right: 60px;
}
[app="app.balzdash"] #top-speed .label,
[app="app.balzdash"] #top-speed .value,
[app="app.balzdash"] #avg-speed .label,
[app="app.balzdash"] #avg-speed .value {
	display: block;
}

[app="app.balzdash"] #top-speed .label,
[app="app.balzdash"] #avg-speed .label {
	font-size: 18px;
	margin-bottom: 5px;
	opacity: .4;
}

[app="app.balzdash"] #top-speed .value,
[app="app.balzdash"] #avg-speed .value {
	font-size: 24px;
	opacity: .6;
}



[app="app.balzdash"] #top-right-con {
	position: absolute;
	top: 40px;
	right: 55px;
	color:rgba(255, 255, 255, 0.55);
	text-align: right;
}
[app="app.balzdash"] #time-con {
	font-size: 60px;
	line-height: 60px;
	color:rgba(255, 255, 255, 0.85);
}
[app="app.balzdash"] #time-con .ampm {
	font-size: 16px;
	line-height: 16px;
	color:rgba(255, 255, 255, 0.55);
	margin-left: 6px;
}
[app="app.balzdash"] #date-con {
	margin-top: 10px;
	margin-bottom: 40px;
	font-size: 26px;
	line-height: 26px;
}

[app="app.balzdash"] #temperature {
	position: relative;
}
[app="app.balzdash"] #temperature .value {
	display: inline-block;
	font-size: 70px;
	line-height: 70px;
	margin-right: 8px;
}
[app="app.balzdash"] #temperature:after {
	position: absolute;
	content: '\00b0';
	right: 0;
	top: 2px;
	font-size: 40px;
}
[app="app.balzdash"] #temperature .label {
	display: inline-block;
	font-size: 25px;
	line-height: 25px;
	text-transform: uppercase;
	opacity: .5;
}

[app="app.balzdash"] #additional-stats {
	margin-top: 25px;
	font-size: 18px;
	line-height: 34px;
	vertical-align: bottom;
}

[app="app.balzdash"] #heading .label,
[app="app.balzdash"] #avg-fuel-cons .label {
	display: inline-block;
	margin-right: 8px;
	opacity: .7;
}
[app="app.balzdash"] #heading .value,
[app="app.balzdash"] #avg-fuel-cons .value {
	display: inline-block;
	width: 40px;
}


[app="app.balzdash"] #bottom-right-con {
	position: absolute;
	bottom: 54px;
	right: 15px;
	color:rgba(255, 255, 255, 0.6);
	text-align: right;
	font-size: 20px;
	line-height: 20px;
}



[app="app.balzdash"] #bottom-con {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	height: 40px;
	background-color: rgba(255, 255, 255, 0.1);
	color:rgba(255, 255, 255, 0.65);
}
[app="app.balzdash"] #bottom-con .fuel-level {
	position: relative;
	display: block;
	background-color: rgba(0, 117, 255, .2);
	height: 100%;
	width: 0;
	transition: width .8s linear;
}
[app="app.balzdash"] #bottom-con .fuel-percentage {
	position: absolute;
	left: 45px;
	top: 11px;
	font-size: 18px;
	line-height: 18px;
	opacity: .8;
	z-index: 1;
}
[app="app.balzdash"] #bottom-con .fuel-icon {
	position: absolute;
	left: 10px;
	top: 9px;
	width: 22px;
	height: 22px;
	background: url(images/fuel.png) no-repeat center center transparent;
	background-size: 100% 100%;
	z-index: 2;
	opacity: .4;
}
[app="app.balzdash"] #bottom-con .fuel-level.warning {
	background-color: rgba(255, 0, 0, .5);
}

